# re_data_engineering

./: LICENSE  README.md  check.py  clean_scraped_data.py  idealista_pipeline.py  idealista_scraper_class.py  idealista_to_gcs_pipeline.py  pyproject.toml  requirements.txt  upload_to_gcp.py  upload_to_gcs.py
prefect/: idealista-pipeline-daily.yaml  idealista_flow.py
prefect_pipelines/: idealista-pipeline-daily-testing.yaml  idealista_flow.py  madrid_rent_daily.yaml  madrid_sale_daily.yaml  rent-test.yaml  sale-test.yaml
scripts/: main.py
src/: clean_data.py  gcp_upload.py  main.py  scraper_class.py  utils.py
src/data_processing/: feature_parser.py  geocoding.py  tasks.py  utils.py
src/flows/: debug.py  idealista_flow.py  utils.py
src/models/: property.py
src/parsers/: base_parser.py  helpers.py  idealista_parser.py
src/repositories/gcp/: bigquery.py  parquet.py  storage.py
src/repositories/http/: base_http_client.py  random_headers.py  rate_limiter.py
src/scrapers/: base_scraper.py  idealista_scraper.py  tasks.py  utils.py
terraform/: main.tf  variables.tf
